<resources>
    <string name="app_name">MamaAndroid Thermal Pos</string>

    <string name="menu_title">Mamandroid</string>
    <string name="menu1">Venta</string>
    <string name="menu2">Devoluciones</string>
    <string name="menu3">Opciones y configuración</string>
    <string name="menu4">Estadísticas del dia</string>
    <string name="menuparte2">Opciones básicas</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="cerrar">Cerrar</string>
    <string name="reiniciar_impresora">Reset Impresora</string>



    <!-- *Ayudas en TextEdits* -->
    <string name="tehDevoluciones">Ref...</string>

    <!-- *TextVIews* -->
    <string name="txtInicio">Bienvenido, elige la opcion que quieras en el menú desplegable</string>
    <string name="txtTotal">Total: </string>
    <string name="txtDinero">Cantidad:</string>
    <string name="txtTotalNumber">0.00</string>
    <string name="txtDivisa">Moneda: </string>
    <string name="txtCategoria">Categoría: </string>
    <string name="txtStock">Stock: </string>
    <string name="txtNombreProd">Nombre producto: </string>
    <string name="txtPrecio">Precio: </string>
    <string name="txtRef">Referencia: </string>
    <string name="txtInfo1">Añadir producto: </string>
    <string name="txtInfo2">Editar producto: </string>
    <string name="txtDevoluciones">Busca por ref o fecha</string>




    <!-- *Botones* -->
    <string name="btnBorrar">Borrar</string>
    <string name="btnCodigoBarras">Barcode</string>
    <string name="btnPagar">Cobrar e imprimir</string>
    <string name="btnNSerie">Buscar</string>
    <string name="btnMas">+</string>
    <string name="btnMenos">-</string>
    <string name="btnProductos">Productos</string>
    <string name="btnAnadirProd">Añadir producto</string>
    <string name="btnEditarProd">Editar producto</string>
    <string name="btnBorrarProd">Borrar producto</string>
    <string name="btnGuardarCambios">Guardar cambios</string>


    <!-- *Divisas* -->
    <string name="euro">€</string>
    <string name="dolar">$</string>


    <!-- *Array  Divisas* -->
    <string-array name="monedas_array">
        <item name="euro">€</item>
        <item name="dolar">$</item>
    </string-array>

    <!--Hint-->
    <string name="edTxtCategoria">Ej.: Smartphones</string>
    <string name="edTxtStock">Ej.: 50</string>
    <string name="edTxtNombreProd">Ej.: Samsung Galaxy S7</string>
    <string name="edTxtPrecio">Ej.: 370.90</string>
    <string name="edTxtRef">Ej.: 0000000000</string>
    <string name="edDevRef">Ref,fecha,etc</string>



    <!-- *Mensajes* -->
    <string name="mensajeSalida">Presiona atrás de nuevo para salir</string>



    <string name="cambio">Cambio</string>

</resources>

