<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="@string/menu1"/>
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/ic_replay_black_24dp"
            android:title="@string/menu2"/>
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/menu4"/>
        <item
            android:id="@+id/menu_seccion_4"
            android:icon="@drawable/ic_build_black_24dp"
            android:title="@string/menu3"/>
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/menuparte2">
        <menu>
            <item
                android:id="@+id/menu_switch_bluetooth"
                android:icon="@drawable/ic_settings_bluetooth_black_24px"
                android:title="@string/bluetooth"
                app:actionLayout="@layout/bluetooth_switch"/>

            <item
                android:id="@+id/menu_opcion_2"
                android:icon="@drawable/happyfaces"
                android:title="Reiniciar Impresora"/>
        </menu>
    </item>


</menu>