<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:id="@+id/txtInformativo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <TextView
        android:text="@string/txtCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCategoria" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edTxtCategoria"
        android:ems="10"
        android:id="@+id/edTxtCategoria" />


    <TextView
        android:text="@string/txtStock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtStock" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edTxtStock"
        android:ems="10"
        android:id="@+id/edTxtStock" />

    <TextView
        android:text="@string/txtNombreProd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtNombreProducto" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edTxtNombreProd"
        android:ems="10"
        android:id="@+id/edTxtNombreProd" />

    <TextView
        android:text="Precio: "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtPrecio" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edTxtPrecio"
        android:ems="10"
        android:id="@+id/edTxtPrecio" />

    <TextView
        android:text="@string/txtRef"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtReferencia" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/edTxtRef"
        android:ems="10"
        android:id="@+id/edTxtRef" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnGuardarCambios"
        android:text="@string/btnGuardarCambios"/>



</LinearLayout>