<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blanco">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/lLayoutTopVentas">

        <Button
            android:text="@string/btnCodigoBarras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnBarras"
            android:layout_weight="1" />

        <Button
            android:text="@string/btnNSerie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_weight="1" />

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnCobrar"
        android:id="@+id/lLayoutBotVentas">

        <GridLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_above="@+id/lLayoutBotVentas"
            android:id="@+id/glTotalVentas">

            <TextView
                android:text="@string/txtTotal"
                android:layout_width="107dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:layout_weight="1" />

            <TextView
                android:text="@string/txtTotalNumber"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtPrecio"
                android:layout_weight="9.24"
                android:layout_row="0"
                android:layout_column="2"
                android:textAlignment="textEnd" />

            <TextView
                android:text="@string/euro"
                android:layout_width="62dp"
                android:layout_height="wrap_content"
                android:id="@+id/txtDivisa"
                android:layout_weight="1"
                android:layout_row="0"
                android:layout_column="18" />

        </GridLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btnCobrar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <TextView
                android:text="@string/txtDinero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtCantidad"
                android:layout_above="@+id/btnCobrar"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/txtTotal"
                android:layout_weight="1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/etDinero"
                android:layout_above="@+id/btnCobrar"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/txtCantidad"
                android:layout_toEndOf="@+id/txtCantidad"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/btnPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCobrar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_weight="1" />

    <android.support.v7.widget.RecyclerView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/rcvProductos"
        android:layout_weight="1"
        android:fadeScrollbars="false"
        android:layout_below="@+id/lLayoutTopVentas"
        android:layout_above="@+id/lLayoutBotVentas"
        android:paddingTop="5dp"
        android:paddingBottom="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scrollbars="vertical" />

</RelativeLayout>